tree-sitter/grammar.js
    source_file: $ => repeat($._file_item),

    _file_item: $ => choice(
      $.import_declaration,
      $.program_declaration,
      $.interface_declaration,
      $.struct_definition,
      $.function_definition,
      $.final_function_definition,
      $.view_function_definition,
      $.const_declaration,
      $.impl_definition,
    ),

    _program_item: $ => choice(
      $.struct_definition,
      $.record_definition,
      $.mapping_definition,
      $.storage_definition,
      $.const_declaration,
      $.function_definition,
      $.final_function_definition,
      $.view_function_definition,
      $.constructor_definition,
      $.interface_declaration,
      $.impl_definition,
    ),

    program_id: $ => seq(
      field('name', $.identifier),
      '.',
      'aleo',
    ),

    program_declaration: $ => seq(
      'program',
      field('name', $.program_id),
      optional(seq(':', field('parents', $.parent_list))),
      '{',
      repeat($._program_item),
      '}',
    ),

    parent_list: $ => seq(
      $._type,
      repeat(seq('+', $._type)),
    ),

    interface_declaration: $ => seq(
      optional('export'),
      'interface',
      field('name', $.identifier),
      optional(seq(':', field('parents', $.parent_list))),
      '{',
      repeat($.interface_item),
      '}',
    ),

    interface_item: $ => choice(
      $.function_prototype,
      $.record_prototype,
      $.mapping_definition,
      $.storage_definition,
    ),

    function_prototype: $ => seq(
      optional('view'),
      'fn',
      field('name', $.identifier),
      optional(field('const_parameters', $.const_param_list)),
      field('parameters', $.parameter_list),
      optional(seq(token(prec(1, '->')), field('return_type', $.return_type))),
      ';',
    ),

    record_prototype: $ => seq(
      'record',
      field('name', $.identifier),
      choice(
        ';',
        // Partially-constrained record body in an interface: fields must end
        // with a trailing `..` (fully constraining fields is not yet supported).
        seq('{', optional(commaSep1($.struct_field)), '..', '}'),
      ),
    ),

    struct_definition: $ => seq(
      optional('export'),
      'struct',
      field('name', $.identifier),
      optional(field('const_parameters', $.const_param_list)),
      field('body', $.struct_field_list),
    ),

    record_definition: $ => seq(
      'record',
      field('name', $.identifier),
      optional(field('const_parameters', $.const_param_list)),
      field('body', $.struct_field_list),
    ),

    struct_field_list: $ => seq(
      '{',
      optional(commaSep1($.struct_field)),
      '}',
    ),

    struct_field: $ => seq(
      optional($.visibility),
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    visibility: _ => choice(
      'public',
      'private',
      'constant',
    ),

    mapping_definition: $ => seq(
      'mapping',
      field('name', $.identifier),
      ':',
      field('key', $._type),
      token(prec(1, '=>')),
      field('value', $._type),
      ';',
    ),

    storage_definition: $ => seq(
      'storage',
      field('name', $.identifier),
      ':',
      field('type', $._type),
      ';',
    ),

    const_declaration: $ => seq(
      optional('export'),
      'const',
      field('name', $.identifier),
      ':',
      field('type', $._type),
      '=',
      field('value', $._expression),
      ';',
    ),

    function_definition: $ => seq(
      repeat($.annotation),
      optional('export'),
      'fn',
      field('name', $.identifier),
      optional(field('const_parameters', $.const_param_list)),
      field('parameters', $.parameter_list),
      optional(seq(token(prec(1, '->')), field('return_type', $.return_type))),
      field('body', $.block),
    ),

    view_function_definition: $ => seq(
      repeat($.annotation),
      optional('export'),
      'view',
      'fn',
      field('name', $.identifier),
      optional(field('const_parameters', $.const_param_list)),
      field('parameters', $.parameter_list),
      optional(seq(token(prec(1, '->')), field('return_type', $.return_type))),
      field('body', $.block),
    ),

    constructor_definition: $ => seq(
      repeat($.annotation),
      'constructor',
      field('parameters', $.parameter_list),
      field('body', $.block),
    ),

    const_param_list: $ => seq(
      token(prec(1, '::')),
      '[',
      optional(commaSep1($.const_param)),
      ']',
    ),

    const_param: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    parameter_list: $ => seq(
      '(',
      optional(commaSep1($.parameter)),
      ')',
    ),

    parameter: $ => seq(
      optional($.visibility),
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    return_type: $ => choice(
      $.return_type_item,
      seq('(', optional(commaSep1($.return_type_item)), ')'),
    ),

    return_type_item: $ => seq(
      optional($.visibility),
      $._type,
    ),

    annotation: $ => seq(
      '@',
      field('name', $._annotation_name),
      optional(seq('(', optional(commaSep1($.annotation_pair)), ')')),
    ),

    _annotation_name: $ => choice(
      $.identifier,
      ...ALL_KEYWORDS,
    ),

    _statement: $ => choice(
      $.let_statement,
      $.const_statement,
      $.return_statement,
      $.if_statement,
      $.for_statement,
      $.assert_statement,
      $.assert_eq_statement,
      $.assert_neq_statement,
      $.block,
      $.compound_assignment_statement,
      $.assignment_statement,
      $.expression_statement,
    ),

    let_statement: $ => seq(
      'let',
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
      ';',
    ),

    const_statement: $ => seq(
      'const',
      field('name', $.identifier),
      ':',
      field('type', $._type),
      '=',
      field('value', $._expression),
      ';',
    ),

    return_statement: $ => seq(
      'return',
      optional(field('value', $._expression)),
      ';',
    ),

    assignment_statement: $ => seq(
      field('left', $._expression),
      '=',
      field('right', $._expression),
      ';',
    ),

    compound_assignment_statement: $ => seq(
      field('left', $._expression),
      field('operator', $.compound_assign_op),
      field('right', $._expression),
      ';',
    ),

    compound_assign_op: _ => choice(
      token(prec(1, '**=')),
      token(prec(1, '&&=')),
      token(prec(1, '||=')),
      token(prec(1, '<<=')),
      token(prec(1, '>>=')),
      '+=',
      '-=',
      '*=',
      '/=',
      '%=',
      '&=',
      '|=',
      '^=',
    ),

    if_statement: $ => seq(
      'if',
      field('condition', $._expression_no_struct),
      field('consequence', $.block),
      optional(seq('else', field('alternative', choice($.if_statement, $.block)))),
    ),

    for_statement: $ => seq(
      'for',
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      'in',
      field('start', $._expression_no_struct),
      field('operator', choice(token(prec(1, '..=')), token('..'))),
      field('end', $._expression_no_struct),
      field('body', $.block),
    ),

    assert_statement: $ => seq(
      'assert',
      '(',
      field('condition', $._expression),
      ')',
      ';',
    ),

    assert_eq_statement: $ => seq(
      'assert_eq',
      '(',
      field('left', $._expression),
      ',',
      field('right', $._expression),
      ')',
      ';',
    ),

    assert_neq_statement: $ => seq(
      'assert_neq',
      '(',
      field('left', $._expression),
      ',',
      field('right', $._expression),
      ')',
      ';',
    ),

    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    _pattern: $ => choice(
      $.identifier_pattern,
      $.tuple_pattern,
      $.wildcard_pattern,
    ),

    identifier_pattern: $ => seq($.identifier),

    tuple_pattern: $ => seq(
      '(',
      $._pattern,
      repeat(seq(',', $._pattern)),
      optional(','),
      ')',
    ),

    wildcard_pattern: $ => $.underscore,

    _expression: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.cast_expression,
      $.ternary_expression,
      $.call_expression,
      $.method_call_expression,
      $.field_expression,
      $.tuple_access_expression,
      $.index_expression,
      $.dynamic_op_expression,
      $.path_expression,
      $.struct_expression,
      $.struct_locator_expression,
      $.path_locator_expression,
      $.program_ref_expression,
      $.self_expression,
      $.block_keyword_expression,
      $.network_keyword_expression,
      $.parenthesized_expression,
      $.tuple_expression,
      $.array_expression,
      $.repeat_expression,
      $.final_expression,
      $._literal,
    ),

    _expression_no_struct: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $.cast_expression,
      $.ternary_expression,
      $.call_expression,
      $.method_call_expression,
      $.field_expression,
      $.tuple_access_expression,
      $.index_expression,
      $.dynamic_op_expression,
      $.path_expression,
      $.path_locator_expression,
      $.program_ref_expression,
      $.self_expression,
      $.block_keyword_expression,
      $.network_keyword_expression,
      $.parenthesized_expression,
      $.tuple_expression,
      $.array_expression,
      $.repeat_expression,
      $.final_expression,
      $._literal,
    ),

    binary_expression: $ => {
      const leftTable = [
        [PREC.or, token(prec(1, '||'))],
        [PREC.and, token(prec(1, '&&'))],
        [PREC.bitor, '|'],
        [PREC.bitxor, '^'],
        [PREC.bitand, '&'],
        [PREC.shift, choice(token(prec(1, '<<')), token(prec(1, '>>')))],
        [PREC.add, choice('+', '-')],
        [PREC.multiply, choice('*', '/', '%')],
      ];

      return choice(
        ...leftTable.map(([precedence, operator]) => prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        ))),
        prec.right(PREC.power, seq(
          field('left', $._expression),
          field('operator', token(prec(1, '**'))),
          field('right', $._expression),
        )),
        prec.left(PREC.compare_eq, seq(
          field('left', $._expression),
          field('operator', choice(token(prec(1, '==')), token(prec(1, '!=')))),
          field('right', $._expression),
        )),
        prec.left(PREC.compare_ord, seq(
          field('left', $._expression),
          field('operator', choice('<', token(prec(1, '<=')), '>', token(prec(1, '>=')))),
          field('right', $._expression),
        )),
      );
    },

    cast_expression: $ => prec.left(PREC.cast, seq(
      field('value', $._expression),
      'as',
      field('type', choice($.primitive_type, $.dyn_record_type)),
    )),

    method_call_expression: $ => prec.left(PREC.call + 1, seq(
      field('value', $._expression),
      '.',
      field('method', $._field_name),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      optional(commaSep1($._expression)),
      ')',
    ),

    field_expression: $ => prec.left(PREC.call, seq(
      field('value', $._expression),
      '.',
      field('field', $._field_name),
    )),

    path_expression: $ => choice(
      $.special_path,
      seq(
        $.identifier,
        repeat(seq(token(prec(1, '::')), $.identifier)),
        optional($.const_arg_list),
      ),
    ),

    struct_expression: $ => seq(
      field('name', $.path_expression),
      field('body', $.struct_field_init_list),
    ),

    struct_locator_expression: $ => seq(
      field('name', $.path_locator_expression),
      field('body', $.struct_field_init_list),
    ),

    path_locator_expression: $ => seq(
      field('program', $.program_id),
      token(prec(1, '::')),
      field('member', $.identifier),
      repeat(seq(token(prec(1, '::')), $.identifier)),
      optional($.const_arg_list),
    ),

    program_ref_expression: $ => $.program_id,

    struct_field_init_list: $ => seq(
      '{',
      optional(choice(
        // A struct update base may stand alone: `Foo { ..base }`.
        $.struct_base_update,
        // Otherwise, explicit fields optionally followed by a trailing `..base`.
        seq(
          commaSep1($.struct_field_init),
          optional($.struct_base_update),
        ),
      )),
      '}',
    ),

    struct_field_init: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('value', $._expression))),
    ),

    // A struct update base: `..expr` copies any field not listed explicitly from `expr`.
    const_arg_list: $ => choice(
      $.const_arg_list_bracket,
      $.const_arg_list_angle,
    ),

    const_arg_list_bracket: $ => seq(
      token(prec(1, '::')),
      '[',
      optional(commaSep1($.const_arg)),
      ']',
    ),

    const_arg: $ => choice(
      $.dynamic_call_return_type,
      $._type,
      $._expression,
    ),

    // A visibility-prefixed type argument, e.g. `public u64` in `foo::[public u64]`.
    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      ')',
    ),

    tuple_expression: $ => choice(
      seq('(', ')'),
      seq('(', $._expression, ',', commaSep1($._expression), ')'),
    ),

    integer_literal: _ => token(choice(
      /[0-9][0-9A-Za-z_]*(u8|u16|u32|u64|u128|i8|i16|i32|i64|i128)?/,
      /0x[0-9A-Za-z_]+(u8|u16|u32|u64|u128|i8|i16|i32|i64|i128)?/,
      /0o[0-9A-Za-z_]+(u8|u16|u32|u64|u128|i8|i16|i32|i64|i128)?/,
      /0b[0-9A-Za-z_]+(u8|u16|u32|u64|u128|i8|i16|i32|i64|i128)?/,
    )),

    // Suffix literals accept the same bases as integer literals (decimal, `0x`, `0o`, `0b`);
    // the compiler classifies purely by the trailing type suffix.
    field_literal: _ => token(prec(2, /[0-9][0-9A-Za-z_]*field/)),

    group_literal: _ => token(prec(2, /[0-9][0-9A-Za-z_]*group/)),

    scalar_literal: _ => token(prec(2, /[0-9][0-9A-Za-z_]*scalar/)),

    string_literal: _ => token(/"[^"]*"/),

    // Single-quoted identifier literals (e.g. `'aleo'`), used as intrinsic arguments like `Program::function_checksum`.
    identifier_literal: _ => token(/'[a-zA-Z][a-zA-Z0-9_]*'/),

    address_literal: _ => token(/aleo1[a-z0-9]+/),

    boolean_literal: _ => choice('true', 'false'),

    none_literal: _ => 'none',

    _type: $ => choice(
      $.primitive_type,
      $.dyn_record_type,
      $.path_type,
      $.locator_type,
      $.array_type,
      $.vector_type,
      $.tuple_type,
      $.optional_type,
      $.final_type,
      $.mapping_type,
    ),

    // A dynamic record type: `dyn record`.
    primitive_type: _ => choice(
      'address',
      'bool',
      'field',
      'group',
      'scalar',
      'signature',
      'string',
      'identifier',
      'i8',
      'i16',
      'i32',
      'i64',
      'i128',
      'u8',
      'u16',
      'u32',
      'u64',
      'u128',
    ),

    path_type: $ => seq(
      $.identifier,
      repeat(seq(token(prec(1, '::')), $.identifier)),
      optional($.const_arg_list),
    ),

    locator_type: $ => seq(
      $.program_id,
      repeat(seq(token(prec(1, '::')), $.identifier)),
      optional($.const_arg_list),
    ),

    array_type: $ => seq(
      '[',
      field('element', $._type),
      ';',
      field('length', $._expression),
      ']',
    ),

    vector_type: $ => seq(
      '[',
      field('element', $._type),
      ']',
    ),

    tuple_type: $ => choice(
      seq('(', ')'),
      seq('(', $._type, repeat(seq(',', $._type)), optional(','), ')'),
    ),

    optional_type: $ => prec.right(seq(
      field('type', $._type),
      '?',
    )),

    identifier: _ => /[a-zA-Z][a-zA-Z0-9_]*|_[a-zA-Z][a-zA-Z0-9_]*/,
